--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 /* ROOT, DEFAULT STYLE */
-a,img,li{
+a,img,li,button{
       cursor: pointer;
 }
 body{
@@ -11,6 +11,7 @@ body{
 
 /* ============== HEADER ================= */
 header{
+      position: fixed;
       display: flex;
       justify-content: space-between;
       border-radius: 10px;
@@ -19,6 +20,7 @@ header{
       border: 1px solid gray;
       padding: 10px ;
       box-shadow: 0px 5px 5px gray;
+     
 }
 
 #logo{width: 50px; height: 50px; margin-left: 50px;}
@@ -31,7 +33,6 @@ ul{
 ul li{
       display: inline-block;
       list-style: none;
-      transition: 1s;
 }
 ul li:hover{
       box-shadow: 0px 2px 0px black;
@@ -45,9 +46,24 @@ ul li:hover{
 
 /* ============== MAIN ================= */
 main{
+      padding-top: 12vh;
       @media (min-width: 1300px){
             display: grid;
             grid-template-columns: 25% 25% 25% 25%;
       }
       
+}
+/* ============================================================================= */
+
+
+
+
+
+
+
+/* ============== FOOTER ================= */
+
+footer{
+      background-color: black;
+      padding: 10vh 10vw;
 }
